add template and  path for movie-info and fixed links to static files

--- a/templates/index.handlebars
+++ b/templates/index.handlebars
@@ -67,6 +67,11 @@
 
       <script src="src/JS/accordion.js"></script>
 
+      <section>
+        <div>
+         <a href="movie-info/1">link to info about a movie</a>
+        </div>
+
       <section class="show-movies sec-cont">
         <div class="movies-lists-container">
           <h1 class="index-title">PÅ BION JUST NU</h1>
