--- a/templates/layouts/main.handlebars
+++ b/templates/layouts/main.handlebars
@@ -3,41 +3,41 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="apple-touch-icon" sizes="180x180" href="static/images/favicon_io/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="static/images/favicon_io/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="static/images/favicon_io/favicon-16x16.png">
-    <link rel="manifest" href="static/images/favicon_io/site.webmanifest">
-    <script type="module" src="src/JS/main.js"></script>
+    <link rel="apple-touch-icon" sizes="180x180" href="/static/images/favicon_io/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/static/images/favicon_io/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/static/images/favicon_io/favicon-16x16.png">
+    <link rel="manifest" href="/static/images/favicon_io/site.webmanifest">
+    <script type="module" src="/src/JS/main.js"></script>
     <script
       src="https://kit.fontawesome.com/04d50240d2.js"
       crossorigin="anonymous"
     ></script>
-    <link rel="stylesheet" href="static/css/main.css" />
+    <link rel="stylesheet" href="/static/css/main.css" />
     <title>Biograf Luleå</title>
   </head>
 
   <body>
     <header class="sec">
       <div class="header-content-wrap sec-cont">
-        <a href="index" class="logo"
-          ><img src="static/images/Logo.png" alt="logo"
+        <a href="/index" class="logo"
+          ><img src="/static/images/Logo.png" alt="logo"
         /></a>
         <nav class="header-nav">
           <button class="header-nav-toggle"></button>
           <menu class="header-menu">
             <li>
-              <a class="header-menu-item active" href="index">Hem</a>
+              <a class="header-menu-item active" href="/index">Hem</a>
             </li>
             <li>
-              <a class="header-menu-item" href="about-us">Om oss</a>
+              <a class="header-menu-item" href="/about-us">Om oss</a>
             </li>
             <li>
-              <a class="header-menu-item" href="under-construction"
+              <a class="header-menu-item" href="/under-construction"
                 >Biljettinfo</a
               >
             </li>
             <li>
-              <a class="header-menu-item" href="under-construction"
+              <a class="header-menu-item" href="/under-construction"
                 >Presentkort</a
               >
             </li>
@@ -54,7 +54,7 @@
         <li class="movies-nav">
           <ul class="movies-nav-list">
             <li class="movies-nav-element">
-              <a href="movies" class="show-all-movies">Filmer </a>
+              <a href="/movies" class="show-all-movies">Filmer </a>
             </li>
           </ul>
         </li>
