minor scss edit

--- a/src/main.scss
+++ b/src/main.scss
@@ -44,3 +44,5 @@ main {
 @import "sections/sidebar.scss";
 @import "sections/under-construction.scss";
 @import "sections/events.scss";
+@import "sections/movies-from-api-startpage.scss";
+@import "sections/movie-info.scss";
