--- a/templates/movie-info.handlebars
+++ b/templates/movie-info.handlebars
@@ -1,10 +1,16 @@
 
-<div>
-  <h1>{{ movie.attributes.title }}</h1>
-  <div>
-    {{ movie.attributes.intro }}
-  </div>
-  {{#if movie.attributes.image }}
-  <img src="{{ movie.attributes.image.url }}">
-  {{/if }}
-</div>
+
+<main class="main-container sec">
+    <div class="sec-cont movie-info-cont" >
+        <h1 class="movie-info-heading">{{ movie.attributes.title }}</h1>
+        <div class="movie-info-text">
+            {{ movie.attributes.intro }}
+        </div class="movie-info-img">
+        {{#if movie.attributes.image }}
+        <img src="{{ movie.attributes.image.url }}">
+        {{/if }}
+        <div class="buy-button-container">
+            <button><a href="/booking">Köp biljetter</a></button>
+        </div>
+    </div>
+</main>
