click booking btn to take user to booking for a specific movie title

--- a/templates/movie-info.handlebars
+++ b/templates/movie-info.handlebars
@@ -11,7 +11,10 @@
         <img src="{{ movie.attributes.image.url }}">
         {{/if }}
         <div class="buy-button-container">
-            <button><a id="btnBook" >Köp biljetter</a></button>
+            <button><a id="btnBook" >Till bokning</a></button>
         </div>
     </div>
+</main>
+ <main class="main-container sec">
+        <div id="booking-render-container" class="sec-cont" ></div>
 </main>
