change port and fix scss

--- a/src/main.scss
+++ b/src/main.scss
@@ -46,3 +46,4 @@ main {
 @import "sections/events.scss";
 @import "sections/movies-from-api-startpage.scss";
 @import "sections/movie-info.scss";
+@import "sections/movie-from-api-movie-page.scss";
