--- a/src/sections/movie-info.scss
+++ b/src/sections/movie-info.scss
@@ -23,6 +23,10 @@
       font-weight: bold;
       border: none;
 
+      :hover {
+        cursor: pointer;
+      }
+
       a {
         color: white;
       }
