--- a/templates/events.handlebars
+++ b/templates/events.handlebars
@@ -7,10 +7,10 @@
               <nav class="sec">
                 <ul class="events-category-list">
                   <li class="events-category-element">
-                    <a href="under-construction" >Live på bio</a>
+                    <a href="/under-construction" >Live på bio</a>
                   </li>
                   <li class="events-category-element">
-                    <a href="under-construction" >Specialvisningar</a>
+                    <a href="/under-construction" >Specialvisningar</a>
                   </li>
                 </ul>
               </nav>
@@ -21,7 +21,7 @@
             <i class="fa-solid fa-wrench fa-10x"></i>
           </div>
           <div class="under-construction-btn-container">
-            <a href="index" class="under-construction-link-home"
+            <a href="/index" class="under-construction-link-home"
               >Tillbaks hem</a
             >
           </div>
