--- a/templates/layouts/main.handlebars
+++ b/templates/layouts/main.handlebars
@@ -61,7 +61,7 @@
         <li class="movies-nav">
           <ul class="movies-nav-list">
             <li class="movies-nav-element">
-              <a href="salons"
+              <a href="/salons"
                 >Salonger </a
               >
             </li>
@@ -70,7 +70,7 @@
         <li class="movies-nav">
           <ul class="movies-nav-list">
             <li class="movies-nav-element">
-              <a href="restaurant"
+              <a href="/restaurant"
                 >Restaurang </a
               >
             </li>
@@ -79,7 +79,7 @@
         <li class="movies-nav">
           <ul class="movies-nav-list">
             <li class="movies-nav-element">
-              <a href="events"
+              <a href="/events"
                 >Events </a
               >
             </li>
@@ -88,7 +88,7 @@
         <li class="movies-nav">
           <ul class="movies-nav-list">
             <li class="movies-nav-element">
-              <a href="under-construction">Kontakt</a>
+              <a href="/under-construction">Kontakt</a>
             </li>
           </ul>
         </li>
