--- a/templates/movies.handlebars
+++ b/templates/movies.handlebars
@@ -26,13 +26,13 @@
           <nav class="sec">
             <ul class="movies-category-list">
               <li class="movies-category-element">
-                <a href="movies" class="comedy-category">Komedi</a>
+                <a href="/movies" class="comedy-category">Komedi</a>
               </li>
               <li class="movies-category-element">
-                <a href="movies" class="action-category">Action</a>
+                <a href="/movies" class="action-category">Action</a>
               </li>
               <li class="movies-category-element">
-                <a href="movies" class="drama-category">Drama</a>
+                <a href="/movies" class="drama-category">Drama</a>
               </li>
             </ul>
           </nav>
