--- a/templates/restaurant.handlebars
+++ b/templates/restaurant.handlebars
@@ -71,10 +71,10 @@
           <nav class="sec">
             <ul class="restaurant-under-list">
               <li class="restaurant-under-element">
-                <a href="under-construction">Boka bord</a>
+                <a href="/under-construction">Boka bord</a>
               </li>
               <li class="restaurant-under-element">
-                <a href="under-construction">Vår menu</a>
+                <a href="/under-construction">Vår menu</a>
               </li>
             </ul>
           </nav>
