--- a/templates/salonA.handlebars
+++ b/templates/salonA.handlebars
@@ -8,10 +8,10 @@
               <nav class="sec">
                 <ul class="movies-salon-list">
                   <li class="movies-salon-element">
-                    <a href="salonA" id="salon-A">Salong A</a>
+                    <a href="/salonA" id="salon-A">Salong A</a>
                   </li>
                   <li class="movies-salon-element">
-                    <a href="salonB">Salong B</a>
+                    <a href="/salonB">Salong B</a>
                   </li>
                 </ul>
               </nav>
