--- a/templates/salons.handlebars
+++ b/templates/salons.handlebars
@@ -6,10 +6,10 @@
           <nav class="sec">
             <ul class="movies-salon-list">
               <li class="movies-salon-element">
-                <a href="salonA">Salong A</a>
+                <a href="/salonA">Salong A</a>
               </li>
               <li class="movies-salon-element">
-                <a href="salonB">Salong B</a>
+                <a href="/salonB">Salong B</a>
               </li>
             </ul>
           </nav>
