--- a/templates/under-construction.handlebars
+++ b/templates/under-construction.handlebars
@@ -6,7 +6,7 @@
             <i class="fa-solid fa-wrench fa-10x"></i>
           </div>
           <div class="under-construction-btn-container">
-            <a href="index" class="under-construction-link-home"
+            <a href="/index" class="under-construction-link-home"
               >Tillbaks hem</a
             >
           </div>
