--- a/templates/salonB.handlebars
+++ b/templates/salonB.handlebars
@@ -7,10 +7,10 @@
           <nav class="sec">
             <ul class="movies-salon-list">
               <li class="movies-salon-element">
-                <a href="salonA">Salong A</a>
+                <a href="/salonA">Salong A</a>
               </li>
               <li class="movies-salon-element">
-                <a href="salonB" id="salon-B">Salong B</a>
+                <a href="/salonB" id="salon-B">Salong B</a>
               </li>
             </ul>
           </nav>
